--- a/app/.htaccess
+++ b/app/.htaccess
@@ -5,3 +5,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule ^(.*)$ index.php?route=$1 [L,QSA]
 AddDefaultCharset UTF-8
+php_flag magic_quotes_gpc Off
